--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "test": "grunt test"
   },
+  "version": "0.0.6",
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-karma": "^0.11.0",
